# arbitragevault-bookfinder

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  .mcp.json  .mcp.json.example  ANALYSE_PRIX_NEW_VS_USED.md  AUDIT_PHASE_2_RESULTS.md  BACKEND_AUDIT_REPORT.md  BACKEND_DOCS_AUDIT_REPORT.md  BACKEND_TESTING_REPORT.md  CSV_FILTER_BUG_FIX_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOY_COMMIT.md  DOCUMENTATION_HARMONY_FINAL_REPORT.md  E2E_VALIDATION_REPORT.md  FINAL_VALIDATION_BSR.md  FOLLOW_UP_TICKETS.md  GITHUB_ROADMAP.md  GUIDE_TESTS_PRIX_TIMESTAMP.md  GUIDE_TEST_UTILISATEUR_FRONTEND.md  IMPLEMENTATION_COMPLETE_USED_PRICING.md  INSTALLATION_COMPLETE.md  INTEGRATION_KEEPA_FINAL_REPORT.md  INTEGRATION_TEST_RESULTS.md  KNOWN_ISSUES.md  MCP_KEEPA_IMPLEMENTATION_SUMMARY.md  MCP_KEEPA_QUICK_START.md  MCP_KEEPA_TEST_COMMANDS.md  MILESTONE_v1.4.0.md  MILESTONE_v1.6.0_v1.6.1.md  PHASE1_COMPLETION.md  PHASE2_5A_STEP1_COMPLETE.md  PHASE2_5A_STEP1_FINAL_SUMMARY.md  PHASE2_5A_STEP1_PRODUCTION_READY.md  PHASE2_5A_STEP2_FRONTEND.md  PHASE2_COMPLETION.md  PHASE2_FRONTEND_INTEGRATION.md  PHASE2_PLAN.md  PHASE2_VALIDATION_COMPLETE.md  (+89 more)
.claude/: CLAUDE.md  CODE_STYLE_RULES.md  PHASE_5_6_COMPLETE.md  PIPELINE.md  PLAN_UNIFICATION_COMPLETE.md  README.md  SLASH_COMMANDS_GUIDE.md  STRUCTURE.md  SYSTEM_SUMMARY.md  TEST_BRIEF_PR25.md  checkpoint_validated.json  circuit-breaker-state.json  compact_current.md  compact_master.md  errors.md  settings.json  settings.local.json  slash-commands.json
.memex/: rules.md
.netlify/: state.json
backend/: .env.autoscheduler  .env.backup  .env.disabled  .env.example  .env.migration  .env.prod  .env.render_backup  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_MAPPING.md  AUDIT_ROI_PIPELINE.md  BSR_EXTRACTION_DOCUMENTATION.md  CHANGELOG.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  KEEPA_DATA_FRESHNESS_AUDIT.md  Makefile  README.md  README_OLD.md  README_WINDOWS.md  REFACTORING_KEEPA_EXTRACTORS.md  RESTART_INSTRUCTIONS.md  START_BACKEND.bat  SYSTEMIC_FIX_VALIDATION_REPORT.md  TECHNICAL_DEBT.md  VALIDATION_BSR_FIX.md  alembic.ini  analyze_asin_availability.py  audit_config_report.json  audit_config_service.py  audit_config_simple.py  audit_report.json  audit_simple_report.json  autoscheduler_runner.py  autosourcing_e2e_simple_results.json  check_table_structure.py  (+79 more)
(+887 files in other folders)
